# Flappy-Bird-Krakow-Edition

./: Bird.cpp  Collision.cpp  Collision.h  DEFINITIONS.hpp  Flash.cpp  Game.cpp  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.hpp  HUD.h  InputManager.h  Land.cpp  MainMenuState.cpp  Pipe.h  README.md  SFML Template.vcxproj  SFML Template.vcxproj.filters  SplashState.h  Surowka.cpp  Surowka.hpp
SFML Template/: Bird.h  DEFINITIONS.h  Flash.cpp  Flash.h  Flash.hpp  Game.cpp  Game.h  GameOverState.cpp  GameOverState.h  GameOverState.hpp  GameState.cpp  GameState.h  HUD.cpp  InputManager.cpp  Land.h  LevelSelectState.cpp  LevelSelectState.hpp  MainMenuState.cpp  MainMenuState.h  MainMenuState.hpp  Pipe.cpp  SFML Template.vcxproj  SplashState.cpp  Stal.cpp  Stal.hpp  State.h  StateMachine.cpp  main.cpp
SFML Template/SFML Template/: AssetManager.cpp  AssetManager.h  SFML Template.sln  SFML Template.vcxproj  SFML Template.vcxproj.filters  State.h  StateMachine.h  main.cpp
SFML Template/SFML Template/x64/Debug/: SFML Template.exe.recipe  SFML Template.ilk  SFML Template.vcxproj.FileListAbsolute.txt  vc143.idb
SFML Template/SFML Template/x64/Debug/SFML Template.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SFML Template/x64/Debug/: SFML Template.ilk  vc143.idb
SFML Template/x64/Debug/SFML Template.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SFML Template.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
untitled11/: CMakeLists.txt  main.cpp
